--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="favourites">Favourites</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="welcome_to_the_first_fragment_home">Welcome To The First Fragment (Home)!</string>
+    <string name="welcome_to_the_second_fragment_add">Welcome to the Second Fragment(Add)!</string>
+    <string name="welcome_to_the_third_fragment_favourites">Welcome to the Third Fragment(Favourites)!</string>
 </resources>
